[+]: starting task formalize

--- a/parts/05-analysis.tex
+++ b/parts/05-analysis.tex
@@ -1,52 +1,25 @@
 \chapter{Описание предметной области}
 
-\section{Оптимизационная задача}
+\section{Задача поиска объекта на изображении}
 
-Постановка каждой задачи оптимизации (ЗО) включает в себя два объекта: 
-\begin{itemize}
-	\item множество допустимых решений;
-	\item целевую функцию, которую следует минимизировать или максимизировать на указанном множестве~\cite{metodoptimization}.
-\end{itemize}
-
-Результатом решения ОЗ являются наилучшие, в некотором смысле, структура и значения параметров системы. 
-Определение оптимальных значений параметров системы при заданной ее структуре называется параметрической оптимизацией~\cite{paramoptimization}.
-
-Задача оптимизации в целом сводится к задаче поиска экстремума (минимума или максимума) целевой функции. 
-Заданы множество $X$ и функция $f(x)$, определенная на $X$. Требуется найти точки минимума или максимума, в зависимости от условий задачи:
-\begin{equation}
-	\begin{gathered}
-		f(x) \to (\min, \max), \forall x \in X,
-	\end{gathered}.
-\end{equation}
-где $f(x)$~--- целевая функция;
-$X$~--- допустимое множество.
-
-В многокритериальной задаче оптимизации сравнение решений по предпочтительности осуществляется не непосредственно, а при помощи заданных на $X$ числовых функций $f_1, f_2, \dots ,f_m$, называемых критериями. 
-Предполагается, что $m \leq 2$: при $m = 1$ задача оптимизации является однокритериальной.
-
-\clearpage
-\section{Генетические алгоритмы}
-Адаптивные методы основаны на генетических процессах в биологических организмах: биологические популяции развиваются в течение нескольких поколений, подчиняясь законам естественного отбора и принципу «выживает наиболее приспособленный», открытому Чарльзом Дарвиным~\cite{GA}.
-
-Основными операторами ГА являются: кроссинговер, мутация, выбор родителей и селекция~\cite{GA}. 
-
-Основные этапы работы ГА:
+Задача поиска объекта на изображении сводится к решению следующих подзадач~\cite{task}: 
 \begin{enumerate}
-	\item генерируем начальную популяцию из $N$ хромосом;
-	\item вычисляем для каждой хромосомы ее пригодность;
-	\item выбираем пару хромосом--родителей с помощью одного из способов отбора;
-	\item проводим кроссинговер двух родителей с вероятность $P_c$, производя двух потомков;
-	\item проводим мутацию потомков с вероятностью $P_m$;
-	\item повторяем шаги 3-5, пока не будет сгенерировано новое поколение популяции, содержащее $N$ хромосом;
-	\item повторяем шаги 2-6, пока не будет достигнут критерий окончания процесса.
+	\item сегментация~--- выделение участков изображения, которые относятся к разным объектам;
+	\item классификация~--- определение типа объекта, для каждого выделенного сегмента отдельно.
 \end{enumerate}
+Таким образом, обнаружение объектов~--- это процесс сегментации и классификации объектов в изображении. 
 
-На рисунке~\ref{figure:mashin01} представлена схема вышеописанного алгоритма. 
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=\textwidth, height=0.6\textheight, keepaspectratio]{img/algorithm_work.pdf}
-	\caption{Схема работы алгоритма}
-	\label{figure:mashin01}
-\end{figure}
+\section{Сверточные нейронные сети для поиска объектов на изображениях}
 
-
+Сверточные нейронные сети являются наиболее распространенным алгоритмом глубокого обучения, применяющим несколько сверхточных слоев и вычислений.
+Они предоставляют эффективные способы извлечения признаков, а также являются лучшим выбором для решения проблем обнаружения объектов.
+Текущие подходы с использованием методов глубокого обучения для задач классификации и регрессии объектов можно разделить на две категории:
+\begin{enumerate}
+	\item двухэтапные методы, которые представлены такими архитектурами как R-CNN, FastR-CNN и FasterR-CNN;
+	\item одноэтапные алгоритмы, представленные различными версиями YOLO и др.
+\end{enumerate}
+В двухэтапных методах используется селективный поиск или сеть региональных предположений (англ. RPN) для выделения областей, с высокой вероятностью содержащих внутри себя объекты.
+Затем при помощи классификатора определяется класс объекта, а при помощи регрессора определяются ограничивающие рамки.
+Данный метод обладает высокой точностью, но при этом ограничен в скорости обнаружения.
+Одноэтапные алгоритмы не используют отдельную сеть для генерации регионов и основываются на методах регрессии, просматривая изображения целиком.
+Так как данные алгоритмы не используют RPN, скорость обнаружения выше, но точность выделения, в особенности малых объектов, не такая высокая, как у двухэтапных методов~\cite{base}.
