--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -33,3 +33,16 @@
 	howpublished={[Электронный ресурс]. ~--- Режим доступа:
 	\url{https://www.elibrary.ru/download/elibrary_50010096_98847482.pdf} (дата обращения: 30.11.24).}
 }
+
+@misc{task,
+	title={Поиск объектов на изображениях с использованием TensorFlow Object Detection},
+	howpublished={[Электронный ресурс]. ~--- Режим доступа:
+	\url{https://shorturl.at/8MbIJ} (дата обращения: 30.11.24).}
+}
+
+@article{base,
+	title={СРАВНЕНИЕ YOLOV5 И FASTERR-CNN ДЛЯ ОБНАРУЖЕНИЯ ЛЮДЕЙ НА ИЗОБРАЖЕНИИ В ПОТОКОВОМ РЕЖИМЕ},
+	author={М.~С.~Тимошкин and А.~Н.~Миронов and А.~С.~Леонтьев},
+	journal={Международный научно--исследовательский журнал},
+	year={2022}
+}
