--- a/report.tex
+++ b/report.tex
@@ -22,7 +22,7 @@
 \include{parts/02-def}
 \include{parts/03-abbr}
 \include{parts/04-intro}
-%\include{parts/05-analysis}
+\include{parts/05-analysis}
 %\include{parts/TASK}
 %\include{parts/06-conclusion}
 \makebibliography
