[*]: starting describe CNN modifications

--- a/parts/03-abbr.tex
+++ b/parts/03-abbr.tex
@@ -1,4 +1,5 @@
 \begin{abbreviations}
 	\definition{МИ}{Медицинские изображения}
 	\definition{CNN}{Convolutional neural network}
+	\definition{RPN}{Region Proposal Network}
 \end{abbreviations}
