--- a/parts/05-analysis.tex
+++ b/parts/05-analysis.tex
@@ -13,13 +13,22 @@
 
 Сверточные нейронные сети являются наиболее распространенным алгоритмом глубокого обучения, применяющим несколько сверхточных слоев и вычислений.
 Они предоставляют эффективные способы извлечения признаков, а также являются лучшим выбором для решения проблем обнаружения объектов.
-Текущие подходы с использованием методов глубокого обучения для задач классификации и регрессии объектов можно разделить на две категории:
+Текущие подходы с использованием методов глубокого обучения для задач классификации и регрессии объектов можно разделить на две категории~\cite{base}:
 \begin{enumerate}
-	\item двухэтапные методы, которые представлены такими архитектурами как R-CNN, FastR-CNN и FasterR-CNN;
-	\item одноэтапные алгоритмы, представленные различными версиями YOLO и др.
+	\item двухэтапные методы, которые представлены такими архитектурами, как R-CNN, Fast R-CNN и Faster R-CNN;
+	\item одноэтапные методы, представленные различными версиями YOLO и др.
 \end{enumerate}
+Описанные методы представлены на рисунке~\ref{img:stages}.
+\includeimage
+	{stages}
+	{f}
+	{H}
+	{1\textwidth}
+	{Двухэтапный и одноэтапный методы}
+
 В двухэтапных методах используется селективный поиск или сеть региональных предположений (англ. RPN) для выделения областей, с высокой вероятностью содержащих внутри себя объекты.
-Затем при помощи классификатора определяется класс объекта, а при помощи регрессора определяются ограничивающие рамки.
+Затем, при помощи классификатора, определяется класс объекта, а при помощи регрессора определяются ограничивающие рамки.
 Данный метод обладает высокой точностью, но при этом ограничен в скорости обнаружения.
-Одноэтапные алгоритмы не используют отдельную сеть для генерации регионов и основываются на методах регрессии, просматривая изображения целиком.
+
+Одноэтапные методы не используют отдельную сеть для генерации регионов и основываются на методах регрессии, просматривая изображения целиком.
 Так как данные алгоритмы не используют RPN, скорость обнаружения выше, но точность выделения, в особенности малых объектов, не такая высокая, как у двухэтапных методов~\cite{base}.
