--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -22,22 +22,24 @@
 	year={2024}
 }
 
-@misc{cnn,
+@article{cnn,
 	title={ПРИМЕНЕНИЕ СВЕРТОЧНЫХ НЕЙРОННЫХ СЕТЕЙ ДЛЯ ПОИСКА ОБЪЕКТОВ НА ИЗОБРАЖЕНИЯХ},
-	howpublished={[Электронный ресурс]. ~--- Режим доступа:
-	\url{https://www.elibrary.ru/download/elibrary_48404144_48185403.pdf} (дата обращения: 30.11.24).}
+	author={Д.~А.~Дасаева and В.~В.~Мокшин},
+	journal={ИНФОРМАЦИОННЫЕ СИСТЕМЫ И ТЕХНОЛОГИИ},
+	year={2021}
 }
 
-@misc{cnndef,
+@article{cnndef,
 	title={АНАЛИЗ ПОНЯТИЙ НЕЙРОННАЯ СЕТЬ И СВЕРТОЧНАЯ НЕЙРОННАЯ СЕТЬ, ОБУЧЕНИЕ СВЕРТОЧНОЙ НЕЙРОСЕТИ ПРИ ПОМОЩИ МОДУЛЯ TENSORFLOW},
-	howpublished={[Электронный ресурс]. ~--- Режим доступа:
-	\url{https://www.elibrary.ru/download/elibrary_50010096_98847482.pdf} (дата обращения: 30.11.24).}
+	author={И.~И.~Багаев},
+	journal={Математическое и программное обеспечение в промышленной и социальной сферах},
+	year={2020}
 }
 
-@misc{task,
+@article{task,
 	title={Поиск объектов на изображениях с использованием TensorFlow Object Detection},
-	howpublished={[Электронный ресурс]. ~--- Режим доступа:
-	\url{https://shorturl.at/8MbIJ} (дата обращения: 30.11.24).}
+	author={Е.~Ю.~Митрофанова},
+	year={2022}
 }
 
 @article{base,
