--- a/report.tex
+++ b/report.tex
@@ -23,6 +23,7 @@
 \include{parts/03-abbr}
 \include{parts/04-intro}
 \include{parts/05-analysis}
+\include{parts/06-techno}
 %\include{parts/TASK}
 %\include{parts/06-conclusion}
 \makebibliography
