[*]: finish about YOLO part

--- a/parts/03-abbr.tex
+++ b/parts/03-abbr.tex
@@ -2,4 +2,7 @@
 	\definition{МИ}{Медицинские изображения}
 	\definition{CNN}{Convolutional neural network}
 	\definition{RPN}{Region Proposal Network}
+	\definition{YOLO}{You Only Look Once}
+	\definition{IOU}{Intersection Over Union}
+	\definition{FPS}{Frames Per Second}
 \end{abbreviations}
