--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -48,3 +48,23 @@
 	journal={Международный научно--исследовательский журнал},
 	year={2022}
 }
+
+@article{all,
+	title={Understanding of Object Detection Based on CNN Family and YOLO},
+	author={Juan~Du},
+	journal={Journal of Physics: Conference Series},
+	year={2018}
+}
+
+@article{yolochina,
+	title={Research on Image Recognition of Tuberculosis Lesions by Minimally Invasive Surgical Robot Based on YOLOv2},
+	journal={ARTIFICIAL INTELLIGENCE AND ROBOTICS RESEARCH},
+	author={Zhuerhan and Guo~Yu and Fan~Zheming and Zhang~Xinyang and Lu~Xinyu and Xu~Shuai and Wang~Fengfeng},
+	year={2024}
+}
+
+@article{yolobase,
+	title={YOLO9000: Better, Faster, Stronger},
+	author={Joseph~Redmon and Ali~Farhadi},
+	year={2017}
+}
