--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -59,7 +59,7 @@
 @article{yolochina,
 	title={Research on Image Recognition of Tuberculosis Lesions by Minimally Invasive Surgical Robot Based on YOLOv2},
 	journal={ARTIFICIAL INTELLIGENCE AND ROBOTICS RESEARCH},
-	author={Zhuerhan and Guo~Yu and Fan~Zheming and Zhang~Xinyang and Lu~Xinyu and Xu~Shuai and Wang~Fengfeng},
+	author={Guo~Yu and Zhuerhan and Fan~Zheming and Zhang~Xinyang and Lu~Xinyu and Xu~Shuai and Wang~Fengfeng},
 	year={2024}
 }
 
