[+]: finish about R-CNN

--- a/parts/03-abbr.tex
+++ b/parts/03-abbr.tex
@@ -5,4 +5,6 @@
 	\definition{YOLO}{You Only Look Once}
 	\definition{IOU}{Intersection Over Union}
 	\definition{FPS}{Frames Per Second}
+	\definition{R-CNN}{Regional Convolutional Neural Networks}
+	\definition{SVM}{Support Vector Machine}
 \end{abbreviations}
