--- a/parts/06-techno.tex
+++ b/parts/06-techno.tex
@@ -54,6 +54,26 @@ YOLOv2 имеет множество улучшений по сравнению 
 
 \subsection{R-CNN}
 
+В последнее время для решения задачи поиска объектов на изображении широкое распространение получили алгоритмы, основанные на применении региональных глубоких сверточных нейронных сетей или Regional Convolutional Neural Networks (R-CNN), которые принципиально ориентированы на решение задачи поиска объектов с одновременной их классификацией.
+Исходная реализация таких моделей базируются на использовании специальных алгоритмов предобработки~---~алгоритмов region-proposal-function, обеспечивающих предложение так называемых областей внимания, в которых потенциально могут находиться интересующие объекты.
+Описанный подход предлагает сократить вычислительные затраты, а также позволяют добиться минимального времени определения местоположения объекта и высокой точности его классификации.
+К настоящему моменту имеется большое количество вариантов реализации подобных алгоритмов, которые достигли хороших показателей по данным критериям~\cite{rcnn}.
+
+Алгоритм работы R-CNN состоит из следующих основных шагов и представлен на рисунке~\ref{img:rcnn}:
+\begin{enumerate}
+	\item выполняется генерация областей интереса (region proposals), предположительно содержащих в себе искомые объекты (обычно до 2000 возможных областей) с использованием различных алгоритмов, предназначенных для снижения вычислительной сложности обнаружения объектов на изображении (например, алгоритмы Edge Boxes, Selective search);
+	\item выполняется формирование карты признаков для исходного изображения путем аффинных преобразований, и каждая область интереса преобразуется в квадрат 227 $\times$ 227,	так как используемая архитектура CNN требует входы фиксированного размера 227 $\times$ 227	пикселей;
+	\item выполняется классификация объектов для каждой области интереса с использованием сформированного вектора признаков на основе метода опорных векторов (SVM).
+\end{enumerate}
+Для оценки качества классификации, аналогично модели YOLO, используется показатель $IOU$.
+Считается, что объект обнаружен правильно, если данный показатель превышает некоторый порог, в противном случае считается, что объект не обнаружен~\cite{yolochina, rcnn}.
+\includeimage
+	{rcnn}
+	{f}
+	{H}
+	{0.5\textwidth}
+	{Схема алгоритма работы R-CNN}
+
 \subsection{Fast R-CNN}
 
 \subsection{Faster R-CNN}
