--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -68,3 +68,10 @@
 	author={Joseph~Redmon and Ali~Farhadi},
 	year={2017}
 }
+
+@article{rcnn,
+	title={АНАЛИЗ АЛГОРИТМОВ ПОИСКА ОБЪЕКТОВ НА ИЗОБРАЖЕНИЯХ С ИСПОЛЬЗОВАНИЕМ РАЗЛИЧНЫХ МОДИФИКАЦИЙ СВЕРТОЧНЫХ НЕЙРОННЫХ СЕТЕЙ},
+	journal={ВЕСТНИК ВГУ, СЕРИЯ: СИСТЕМНЫЙ АНАЛИЗ И ИНФОРМАЦИОННЫЕ ТЕХНОЛОГИИ},
+	author={А.~А.~Сирота and Е.~Ю.~Митрофанова and А.~И.~Милованова},
+	year={2019}
+}
