[+]: finish about Fast R-CNN

--- a/parts/06-techno.tex
+++ b/parts/06-techno.tex
@@ -59,7 +59,7 @@ YOLOv2 имеет множество улучшений по сравнению 
 Описанный подход предлагает сократить вычислительные затраты, а также позволяют добиться минимального времени определения местоположения объекта и высокой точности его классификации.
 К настоящему моменту имеется большое количество вариантов реализации подобных алгоритмов, которые достигли хороших показателей по данным критериям~\cite{rcnn}.
 
-Алгоритм работы R-CNN состоит из следующих основных шагов и представлен на рисунке~\ref{img:rcnn}:
+Алгоритм работы R-CNN состоит из следующих основных шагов:
 \begin{enumerate}
 	\item выполняется генерация областей интереса (region proposals), предположительно содержащих в себе искомые объекты (обычно до 2000 возможных областей) с использованием различных алгоритмов, предназначенных для снижения вычислительной сложности обнаружения объектов на изображении (например, алгоритмы Edge Boxes, Selective search);
 	\item выполняется формирование карты признаков для исходного изображения путем аффинных преобразований, и каждая область интереса преобразуется в квадрат 227 $\times$ 227,	так как используемая архитектура CNN требует входы фиксированного размера 227 $\times$ 227	пикселей;
@@ -67,6 +67,8 @@ YOLOv2 имеет множество улучшений по сравнению 
 \end{enumerate}
 Для оценки качества классификации, аналогично модели YOLO, используется показатель $IOU$.
 Считается, что объект обнаружен правильно, если данный показатель превышает некоторый порог, в противном случае считается, что объект не обнаружен~\cite{yolochina, rcnn}.
+
+Схема алгоритма работы R-CNN представлен на рисунке~\ref{img:rcnn}.
 \includeimage
 	{rcnn}
 	{f}
@@ -74,6 +76,44 @@ YOLOv2 имеет множество улучшений по сравнению 
 	{0.5\textwidth}
 	{Схема алгоритма работы R-CNN}
 
+Пример распознавания с использованием R-CNN представлен на рисунке~\ref{img:rcnnwork}.
+\includeimage
+	{rcnnwork}
+	{f}
+	{H}
+	{1\textwidth}
+	{Пример распознавания с использованием R-CNN}
+
 \subsection{Fast R-CNN}
+
+Модель Fast R-CNN является улучшением классической модели R-CNN, которая известна своей низкой производительностью, особенно при взаимодействии с более глубокими сетями.
+Также, при использовании R-CNN затрачивается большой объем памяти для хранения данных.
+
+Алгоритм работы Fast R-CNN состоит из следующих основных шагов~\cite{yolochina, rcnn}:
+\begin{enumerate}
+	\item аналогично R-CNN выполняется генерация областей интереса (region proposals);
+	\item выполняется формирование карты признаков для исходного изображения, но, в отличие от R-CNN, на вход нейронной сети CNN подается полное исходное изображение с последним слоем RoI pooling вместо Max pooling;
+	\item выполняется уточнение границ области интереса при помощи регрессионной модели (Bounding Box Regression);
+	\item выполняется классификация объектов, содержащихся в предполагаемых областях интереса с использованием слоя softmax с $K+1$ выходами.
+\end{enumerate}
+
+\clearpage
+Схема алгоритма работы Fast R-CNN представлен на рисунке~\ref{img:fastrcnn}.
+\includeimage
+	{fastrcnn}
+	{f}
+	{H}
+	{1\textwidth}
+	{Схема алгоритма работы Fast R-CNN}
+
+Пример распознавания с использованием Fast R-CNN представлен на рисунке~\ref{img:fastrcnnwork}.
+\includeimage
+	{fastrcnnwork}
+	{f}
+	{H}
+	{1\textwidth}
+	{Пример распознавания с использованием Fast R-CNN}
+
+\clearpage
 
 \subsection{Faster R-CNN}
