[+]: finish about Faster R-CNN

--- a/parts/06-techno.tex
+++ b/parts/06-techno.tex
@@ -68,7 +68,7 @@ YOLOv2 имеет множество улучшений по сравнению 
 Для оценки качества классификации, аналогично модели YOLO, используется показатель $IOU$.
 Считается, что объект обнаружен правильно, если данный показатель превышает некоторый порог, в противном случае считается, что объект не обнаружен~\cite{yolochina, rcnn}.
 
-Схема алгоритма работы R-CNN представлен на рисунке~\ref{img:rcnn}.
+Схема алгоритма работы R-CNN представлена на рисунке~\ref{img:rcnn}.
 \includeimage
 	{rcnn}
 	{f}
@@ -98,7 +98,7 @@ YOLOv2 имеет множество улучшений по сравнению 
 \end{enumerate}
 
 \clearpage
-Схема алгоритма работы Fast R-CNN представлен на рисунке~\ref{img:fastrcnn}.
+Схема алгоритма работы Fast R-CNN представлена на рисунке~\ref{img:fastrcnn}.
 \includeimage
 	{fastrcnn}
 	{f}
@@ -117,3 +117,35 @@ YOLOv2 имеет множество улучшений по сравнению 
 \clearpage
 
 \subsection{Faster R-CNN}
+
+Faster R-CNN представила сеть региональных предложений (RPN), основанную на Fast R-CNN, которая заменяет внешний алгоритм для генерации областей интереса, предположительно содержащих объект.
+Области интереса (region proposals) используют такую информацию, как текстура, границы и цвет изображения, чтобы заранее определить положение, в котором может появиться искомый объект, что может гарантировать более высокую скорость отклика при меньшем количестве выбранных окон (несколько сотен или даже несколько тысяч).
+Такой подход значительно сокращает временные затраты на последующие операции и позволяет получить искомое окно, а не скользящее более высокого качества.
+В некотором смысле, Faster R-CNN можно представить в виде объединения RPN и Fast R-CNN.
+Эта модификация R-CNN уже предоставила результат с эталонной точностью распознавания, поэтому единственным улучшением будет являться скорость работы, что является основной причиной появления более поздних алгоритмов~\cite{fasterrcnn}.
+
+Алгоритм работы Faster R-CNN состоит из следующих основных шагов~\cite{yolochina, rcnn, fasterrcnn}:
+\begin{enumerate}
+	\item выполняется формирование карты признаков на основе исходного изображения при помощи CNN;
+	\item выполняется генерация областей интереса, возможно содержащих объект, за счет обработки скользящим окном размера 3 $\times$ 3 сформированной карты признаков с использованием RPN;
+	\item выполняется преобразование вектора признаков области интереса из исходного изображения в вектор признаков фиксированной размерности с помощью слоя RoI pooling;
+	\item аналогично шагу 3 алгоритма работы Fast R-CNN выполняется уточнение границ области интереса;
+	\item аналогично шагу 4 алгоритма работы Fast R-CNN выполняется классификация объектов, содержащихся в предполагаемых областях интереса.
+\end{enumerate}
+
+\clearpage
+Схема алгоритма работы Faster R-CNN представлена на рисунке~\ref{img:fasterrcnn}.
+\includeimage
+	{fasterrcnn}
+	{f}
+	{H}
+	{1\textwidth}
+	{Схема алгоритма работы Faster R-CNN}
+
+Пример распознавания с использованием Faster R-CNN представлен на рисунке~\ref{img:fasterrcnnwork}.
+\includeimage
+	{fasterrcnnwork}
+	{f}
+	{H}
+	{1\textwidth}
+	{Пример распознавания с использованием Faster R-CNN}
