--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -75,3 +75,10 @@
 	author={А.~А.~Сирота and Е.~Ю.~Митрофанова and А.~И.~Милованова},
 	year={2019}
 }
+
+@article{fasterrcnn,
+	title={A Fusion Steganographic Algorithm Based on Faster R-CNN},
+	journal={Tech Science Press},
+	author={Ruohan~Meng and Steven~G.~Rice and Jin~Wang and Xingming~Sun},
+	year={2018}
+}
