--- a/parts/03-abbr.tex
+++ b/parts/03-abbr.tex
@@ -7,4 +7,5 @@
 	\definition{FPS}{Frames Per Second}
 	\definition{R-CNN}{Regional Convolutional Neural Networks}
 	\definition{SVM}{Support Vector Machine}
+	\definition{mAP}{Mean Average Precision}
 \end{abbreviations}
