--- a/parts/06-conclusion.tex
+++ b/parts/06-conclusion.tex
@@ -1,10 +1,11 @@
 \chapter*{ЗАКЛЮЧЕНИЕ}
 \addcontentsline{toc}{chapter}{ЗАКЛЮЧЕНИЕ}
-Цель данной работы была достигнута~--- был проведен анализ генетических алгоритмов при решении задач многокритериальной оптимизации.
+
+Цель работы, заключавшаяся в сравнении алгоритмов поиска объектов на изображениях с использованием различных модификаций сверточных нейронных сетей, была достигнута.
 
 Были решены следующие задачи:
-\begin{itemize}
-    \item проведен анализ предметной области генетических алгоритмов.
-    \item описаны основные подходы к решению задачи параметрической многокритериальной оптимизации.
-    \item сформулированы критерии сравнения применяемых методов и выполнена их классификация.
-\end{itemize}
+\begin{enumerate}
+	\item проведен анализ предметной области алгоритмов поиска объектов на изображениях;
+	\item описаны основные подходы к решению задачи распознавания объектов на изображениях;
+	\item сформулированы критерии сравнения применяемых методов и выполнено сравнение.
+\end{enumerate}
