--- a/parts/TASK.tex
+++ b/parts/TASK.tex
@@ -1,51 +1,60 @@
-\chapter{Анализ генетических алгоритмов при решении задач многокритериальной оптимизации}
+\chapter{Сравнение модификаций CNN при решении задач поиска объектов на изображении}
 
-\section{Описание задачи}
-Целью задачи распределения рабочих процессов в процессе производства является эффективное распределение рабочих процессов на доступные машины для минимизации общего времени производства. 
-У каждого рабочего процесса есть определенное время выполнения и заданы ограничения на количество рабочих процессов, которые можно выполнять одновременно на каждой машине.
-Задача многокритериальной оптимизации заключается в поиске оптимального распределения рабочих процессов, учитывая не только время выполнения, но и количество используемых машин.
-\begin{equation}
-	\begin{gathered}
-		f(x) \to (\min, \max), \forall x \in X
-	\end{gathered}.
-\end{equation}
-где $f(x)$~--- целевая функция;
-$X$~--- допустимое множество.
+\section{Результаты сравнения}
 
-
-\section{Способы решения задачи}
-
+Для сравнения модификаций сверточных нейронных сетей будут использоваться следующие основные критерии~\cite{base, all, yolobase, cmp}:
 \begin{enumerate}
-	\item Простой генетический алгоритм:
-	В данном случае, исходя из заданных ограничений и целевых функций, можно определить особи в виде хромосом, представляющих возможные распределения рабочих процессов на машины. 
-	Затем, с помощью операций скрещивания и мутации, можно создать новые поколения особей, оценивая их по целевым функциям и отбирая лучших особей для следующего поколения. 
-	Таким образом, простой генетический алгоритм будет итеративно искать оптимальное распределение.
-	\item Гибридный генетический алгоритм: 
-	для данной задачи можно использовать гибридный подход, комбинируя генетический алгоритм с другими методами оптимизации, такими как локальный поиск или эволюционные стратегии. 
-	Например, можно использовать генетический алгоритм для глобального поиска оптимального решения, а затем применить локальный поиск для улучшения найденного решения.
-	\item Параллельный и распределенный генетический алгоритм: 
-	для данной задачи, где решение требует обработки большого объема данных и выполнения вычислительно сложных операций, можно применить параллельные и распределенные вычисления. 
-	Несколько генетических алгоритмов могут работать параллельно, обмениваясь информацией и объединяя свои результаты для получения более точного и быстрого решения.
-	\item Адаптивный генетический алгоритм: 
-	для данной задачи, где условия и ограничения могут изменяться со временем, можно применить адаптивный генетический алгоритм. 
-	В этом случае, генетический алгоритм будет способен адаптироваться к изменяющимся условиям и динамически настраивать свои параметры, такие как вероятность мутации или скрещивания, чтобы достичь оптимального решения.
+	\item mAP;
+	\item FPS;
+	\item PS.
 \end{enumerate}
 
-\section{Выводы}
+Критерий mAP показывает точность модели и вычисляется по формуле~\ref{eq2}.
+\begin{equation}
+	\label{eq2}
+	mAP = 1/N \sum_{i=1}^{N} AP_{i}
+\end{equation}
+, где N~---~ количество классов,
+AP (average precision)~---~популярная метрика для измерения точности детекторов объектов.
 
-\begin{table}[h!]
-	\begin{center}
-		\caption{\label{table:models} Сравнительная таблица для методов описания объектов на сцене}
-		\begin{tabular}{|p{85pt}|p{85pt}|p{85pt}|p{85pt}|p{85pt}|}
-			\hline
-			~ & \textbf{AGA} & \textbf{HGA} & \textbf{SGA} & \textbf{PGA} \\
-			\hline
-			Адаптивность & Изменяет параметры ГА во время выполнения в зависимости от эффективности & Использует комбинацию нескольких методов оптимизации таких как ГА с другими алгоритмами & Фикс. параметры ГА в течение всего процесса оптимизации & Может использовать несколько экземпляров ГА работающих параллельно \\ \hline
-			Гибридизация & Может быть гибридизирован с другими методами оптимизации для повышения эффективности & Интегрирует в себя элементы нескольких различных алгоритмов оптимизации & Основан исключительно на принципах генетического программирования & Может использовать комбинацию различных ГА для решения задачи \\ \hline
-			Простота реализации & Требует дополнительных усилий для настройки адаптивных механизмов & Может потребовать сложной интеграции различных алгоритмов & Прост в реализации и понимании, так как использует базовые принципы ГА & Реализация может потребовать учета аспектов параллельного программирования \\ \hline
-			Склонность к застреванию в локальных оптимумах & Минимиз. за счет адаптивности, & Зависит от конкретной гибридизации, которая может изменять параметр & Может сталкиваться с проблемой застревания в локальных оптимумах из-за отсутствия механизмов адаптивности & Может использовать параллельные  процессы для более широкого поиска в пространстве решений \\  \hline
-		\end{tabular}
-	\end{center}
+Критерий FPS показывает, сколько кадров в секунду может обрабатывать нейронная сеть.
+
+Критерий PS показывает общую оценку каждой системы распознавания, основываясь на том, что точность и скорость имеют одинаковый вес и вычисляется по формуле~\ref{eq3}.
+\begin{equation}
+	\label{eq3}
+	PS = mAP \times FPS
+\end{equation}
+
+В таблице~\ref{table1} представлены количественные результаты сравнения различных модификаций сверточных нейронных сетей на основе сформированных критериев~\cite{all, yolobase}.
+
+\clearpage
+\begin{table}[!ht]
+	\centering
+	\caption{\label{table1} Количественные результаты сравнения различных модификаций CNN на основе сформированных критериев}
+	\begin{tabularx}{\textwidth}{|X|c|c|c|}
+		\hline
+		Модификация CNN & mAP & FPS & PS \\ \hline
+		R-CNN Minus R & 53.5 & 6 & 321.0 \\ \hline
+		Fast R-CNN & 70.0 & 0.5 & 35.0 \\ \hline
+		Faster R-CNN VGG-16 & 73.2 & 7 & 512.4 \\ \hline
+		Faster R-CNN ResNet & 76.4 & 5 & 382.0 \\ \hline
+		YOLOv1 & 63.4 & 45 & 2853.0 \\ \hline
+		YOLOv2 288 $\times$ 288 & 69.0 & \textbf{91} & \textbf{6279.0} \\ \hline
+		YOLOv2 352 $\times$ 352 & 73.7 & 81 & 5970.0 \\ \hline
+		YOLOv2 416 $\times$ 416 & 76.8 & 67 & 5146.0 \\ \hline
+		YOLOv2 480 $\times$ 480 & 77.8 & 59 & 4590.2 \\ \hline
+		YOLOv2 544 $\times$ 544 & \textbf{78.6} & 40 & 3144.0 \\ \hline
+	\end{tabularx}
 \end{table}
 
+\section{Вывод}
 
+Исходя из полученной сравнительной таблицы~\ref{table1}, можно выделить следующие пункты:
+\begin{enumerate}
+	\item по двум из трех сформированных критериев лидирует модель YOLOv2 288 $\times$ 288, обладающая наибольшим значением FPS и PS;
+	\item наибольшей точностью обладает модель YOLOv2 544 $\times$ 544 (по критерию mAP);
+\end{enumerate}
+
+Таким образом, можно сделать вывод, что использование класса моделей YOLO может применяться в задачах поиска изображений в реальном времени, так как именно эти модификации CNN обладают наибольшим значением FPS (от 40 до 91).
+Модели класса Faster R-CNN имеют аналогичные значения mAP в сравнении с моделями YOLO, однако скорость обработки изображений меньше $\sim$~в  7~---~9 раз относительно модели YOLOv2 544 $\times$ 544, и в $\sim$~в  13~---~18 раз относительно модели YOLOv2 288 $\times$ 288.
+Сеть Fast R-CNN обладает наименьшей скоростью поиска объектов (FPS) среди всех представленных модификаций CNN, а самая базовая модель R-CNN Minus R имеет наименьший показатель точности (mAP).
