--- a/parts/biblio.bib
+++ b/parts/biblio.bib
@@ -1,13 +1,3 @@
-%
-%@inbook{astrahan,
-%  author      =   {Т. В. Панченко},
-%  title       =   {Генетические алгоритмы},
-%  publisher   =   {Издательский дом Астраханский университет},
-%  pages       =   {30-34},
-%  language    =   {russian},
-%  year        =   {2007}
-%}
-
 @article{intro1,
 	title={Применение искусственных нейронных сетей для поиска объектов на медицинских изображениях},
 	author={А.~В.~Руденко and М.~А.~Руденко and И.~Л.~Каширина},
@@ -81,4 +71,11 @@
 	journal={Tech Science Press},
 	author={Ruohan~Meng and Steven~G.~Rice and Jin~Wang and Xingming~Sun},
 	year={2018}
+}
+
+@article{cmp,
+	title={СРАВНЕНИЕ ЭФФЕКТИВНОСТИ ОБНАРУЖЕНИЯ ОБЪЕКТОВ СОВРЕМЕННЫХ	СВЕРТОЧНЫХ НЕЙРОННЫХ СЕТЕЙ},
+	journal={ИНФОРМАТИКА, УПРАВЛЯЮЩИЕ СИСТЕМЫ, МАТЕМАТИЧЕСКОЕ И КОМПЬЮТЕРНОЕ МОДЕЛИРОВАНИЕ (ИУСМКМ-2020)},
+	author={С.~Ю.~Колбасов and Ю.~К.~Орлов},
+	year={2020}
 }
