--- a/report.tex
+++ b/report.tex
@@ -24,8 +24,8 @@
 \include{parts/04-intro}
 \include{parts/05-analysis}
 \include{parts/06-techno}
-%\include{parts/TASK}
-%\include{parts/06-conclusion}
+\include{parts/TASK}
+\include{parts/06-conclusion}
 \makebibliography
 
 \end{document}
