--- a/report.tex
+++ b/report.tex
@@ -17,6 +17,7 @@
 	{} % ФИО консультанта (необязательный аргумент; если консультантов несколько, их необходимо разделить запятой)
 
 \setcounter{page}{3}
+\include{parts/essay}
 
 \maketableofcontents
 \include{parts/02-def}
