--- a/parts/TASK.tex
+++ b/parts/TASK.tex
@@ -1,6 +1,6 @@
 \chapter{Сравнение модификаций CNN при решении задач поиска объектов на изображении}
 
-\section{Результаты сравнения}
+\section{Критерии сравнения модификаций CNN}
 
 Для сравнения модификаций сверточных нейронных сетей будут использоваться следующие основные критерии~\cite{base, all, yolobase, cmp}:
 \begin{enumerate}
@@ -24,6 +24,8 @@ AP (average precision)~---~популярная метрика для измер
 	\label{eq3}
 	PS = mAP \times FPS
 \end{equation}
+
+\section{Результаты сравнения}
 
 В таблице~\ref{table1} представлены количественные результаты сравнения различных модификаций сверточных нейронных сетей на основе сформированных критериев~\cite{all, yolobase}.
 
