--- a/report.tex
+++ b/report.tex
@@ -27,6 +27,7 @@
 \include{parts/06-techno}
 \include{parts/TASK}
 \include{parts/06-conclusion}
+\include{parts/07-appendix}
 \makebibliography
 
 \end{document}
