--- a/parts/05-analysis.tex
+++ b/parts/05-analysis.tex
@@ -18,6 +18,8 @@
 	\item двухэтапные методы, которые представлены такими архитектурами, как R-CNN, Fast R-CNN и Faster R-CNN;
 	\item одноэтапные методы, представленные различными версиями YOLO и др.
 \end{enumerate}
+
+\clearpage
 Описанные методы представлены на рисунке~\ref{img:stages}.
 \includeimage
 	{stages}
