--- a/parts/06-techno.tex
+++ b/parts/06-techno.tex
@@ -33,7 +33,7 @@ YOLOv1 разбивает входное изображение на сетку 
 	{yolov1}
 	{f}
 	{H}
-	{1\textwidth}
+	{0.8\textwidth}
 	{Архитектура YOLOv1 CNN}
 
 YOLO версии 2 (YOLOv2)~---~значительно улучшенная модель YOLO, которая сохраняет преимущество в скорости и пытается повысить качество распознавания по сравнению с YOLOv1.
@@ -44,6 +44,7 @@ YOLOv2 имеет множество улучшений по сравнению 
 В первую очередь, YOLOv2 использует Darknet-19 с 19 сверточными слоями и 5 слоями Max-Pooling и вводит якорные рамки (anchor boxes), что позволяет лучше адаптироваться к объектам разных размеров.
 Вместо абсолютных значений координаты предсказываются как смещения относительно якорных рамок, для каждой из которых модель предсказывает параметры координат, уверенность и вероятности классов~\cite{yolochina, yolobase}.
 
+\clearpage
 Архитектура YOLOv2 CNN представлена на рисунке~\ref{img:yolov2}.
 \includeimage
 	{yolov2}
