--- a/parts/TASK.tex
+++ b/parts/TASK.tex
@@ -29,6 +29,7 @@ AP (average precision)~---~популярная метрика для измер
 
 В таблице~\ref{table1} представлены количественные результаты сравнения различных модификаций сверточных нейронных сетей на основе сформированных критериев~\cite{all, yolobase}.
 
+\clearpage
 \begin{table}[!ht]
 	\centering
 	\caption{\label{table1} Количественные результаты сравнения различных модификаций CNN на основе сформированных критериев}
@@ -48,7 +49,7 @@ AP (average precision)~---~популярная метрика для измер
 	\end{tabularx}
 \end{table}
 
-\section{Вывод}
+\section*{Вывод}
 
 Исходя из полученной сравнительной таблицы~\ref{table1}, можно выделить следующие пункты:
 \begin{enumerate}
