--- a/parts/06-conclusion.tex
+++ b/parts/06-conclusion.tex
@@ -4,7 +4,7 @@
 Цель работы, заключавшаяся в сравнении алгоритмов поиска объектов на изображениях с использованием различных модификаций сверточных нейронных сетей, была достигнута.
 
 Были решены следующие задачи:
-\begin{enumerate}
+\begin{enumerate}[leftmargin=1.6\parindent]
 	\item проведен анализ предметной области алгоритмов поиска объектов на изображениях;
 	\item описаны основные подходы к решению задачи распознавания объектов на изображениях;
 	\item сформулированы критерии сравнения применяемых методов и выполнено сравнение.
